src/App.css
body {
  margin: 0;
  font-family: system-ui, sans-serif;
  background: #f7f7f7;
  color: #1f1f1f;
}
.obs{
  margin-top: 12px;
  color: #999;
  font-size: 0.9rem;
}
.page {
  padding: 24px;
}

.hero {
  min-height: 60vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.eyebrow {
  text-transform: uppercase;
  letter-spacing: 0.16em;
  color: #666;
  font-size: 0.8rem;
}

h1 {
  font-size: clamp(3rem, 8vw, 6rem);
  margin: 5px0;
  line-height: 1;
}

.intro {
  max-width: 680px;
  margin: 0 auto;
  font-size: 1.25rem;
  line-height: 1.6;
  color: #444;
}

.heroActions {
  display: flex;
  gap: 16px;
  margin-top: 24px;
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 5px;
  flex-wrap: wrap;
}

.button {
  background: #1f1f1f;
  color: white;
  padding: 12px 18px;
  border-radius: 999px;
  text-decoration: none;
  font-weight: 600;
}

.button.secondary {
  background: white;
  color: #1f1f1f;
  border: 1px solid #ddd;
}

.projects h2,
.contacts h2, .experiences h2 {
  font-size: 2rem;
  margin-bottom: 16px;
}

.projectGrid, .experienceGrid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(1fr 1fr));
  gap: 24px;
}

.contactGrid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(140px, 0.33fr));
  gap: 24px;
}

.card {
  background: white;
  padding: 24px;
  border-radius: 18px;
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.07);
  display: flex;
  flex-direction: column;
}

.card h3 {
  font-size: 1.50rem;
  margin: 8px 0;
}
.card h4 {
  margin: 0 auto;
}
.card p {
  color: #555;
  line-height: 1.5;
}

.impact {
  font-weight: 600;
  color: #222 !important;
}

.techList {
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  margin: 18px 0;
}

.techList span {
  background: #eee;
  padding: 6px 10px;
  border-radius: 999px;
  font-size: 0.85rem;
}

.card a {
  color: #1f1f1f;
  font-weight: 700;
  margin-top: auto;
}

.nav {
  display: flex;
  gap: 24px;
  margin-bottom: 48px;
}

.nav a {
  color: inherit;
  text-decoration: none;
  font-weight: 600;
}

.nav a:hover {
  text-decoration: underline;
}

